Fixed the spacing of the h2s in contact

--- a/css/contact.css
+++ b/css/contact.css
@@ -6,33 +6,32 @@ main {
     margin: var(--default-margin);
 }
 
-section#team {
+section#team-members {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-    margin: var(--default-margin);
 }
 
-section#team article {
+section#team-members article {
+    width: 25%;
     display: flex;
     flex-direction: column;
     align-items: center;
     margin: var(--default-margin);
     padding: var(--default-margin);
     height: auto;
-    width: 25%;
     border-radius: var(--default-radius);
     background-color: var(--mantle-color);
     gap: var(--default-margin);
 }
 
-section#team article>* {
+section#team-members article>* {
     display: flex;
     align-items: center;
     flex-direction: column;
 }
 
-section#team article>*>* {
+section#team-members article>*>* {
     margin: 0;
 }
 
@@ -48,9 +47,21 @@ div.team-member-img img {
     object-fit: cover;
 }
 
+section#visit {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    padding: var(--default-margin);
+}
+
 section#offices {
     width: 100%;
     display: flex;
     justify-content: space-around;
-    padding: var(--default-margin);
+}
+
+section#team h2,
+section#visit h2 {
+    text-align: center;
+    margin: var(--default-margin);
 }
